# encounter-transform-service

./: README.md  pyproject.toml
app/: main.py
app/models/: claim.py  cms1500.py  common.py  diagnostics.py  encounter.py
app/reference/: charge_master.py  pos_codes.py
app/transform/: claim_to_cms1500.py  encounter_to_claim.py
app/validation/: codes.py
examples/: 01_simple_visit.json  02_multi_dx_pointers.json  03_exceeds_six_lines.json  04_unpriced_cpt.json  05_bad_npi_checksum.json
static/: index.html
tests/: test_transform.py
